--- a/Source/TreasureGuide.Web/Views/Account/_ValidationScriptsPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/_ValidationScriptsPartial.cshtml
@@ -6,3 +6,16 @@
         crossorigin="anonymous"
         integrity="sha384-JrXK+k53HACyavUKOsL+NkmSesD2P+73eDMrbTtTk0h4RmOF8hF8apPlkp26JlyH">
 </script>
+<script>
+    // extend jquery range validator to work for required checkboxes
+    var defaultRangeValidator = $.validator.methods.range;
+    $.validator.methods.range = function(value, element, param) {
+        if(element.type === 'checkbox') {
+            // if it's a checkbox return true if it is checked
+            return element.checked;
+        } else {
+            // otherwise run the default validation function
+            return defaultRangeValidator.call(this, value, element, param);
+        }
+    }
+</script>
