Fixing website links.

--- a/Source/TreasureGuide.Web/src/views/account/index.html
+++ b/Source/TreasureGuide.Web/src/views/account/index.html
@@ -15,7 +15,7 @@
         </div>
         <div if.bind="website">
             <label for="website">Website</label>
-            <a id="website" href.bind="website" href="#" target="_blank">${website}</a>
+            <a id="website" href.bind="websiteParsed" href="#" target="_blank">${website}</a>
         </div>
         <div>
             <label for="roles">Roles</label>
