--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -1,5 +1,12 @@
 ﻿<template>
     <h1>News</h1>
+    <h2>01/10/18</h2>
+    <ul>
+        <li>Added better error logging for server-side issues.</li>
+        <li>Fixed an issue with search model caching.</li>
+        <li>Fixed an issue where unauthorized users could try and submit teams.</li>
+    </ul>
+    <hr />
     <h2>01/09/18</h2>
     <ul>
         <li>First release candidate has been launched!</li>
