--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -6,6 +6,7 @@
         <li>Fixed an issue with search model caching.</li>
         <li>Fixed an issue where unauthorized users could try and submit teams.</li>
         <li>Fixed some issues with querying on different browsers.</li>
+        <li>Added calculator export button on Team Detail page.</li>
     </ul>
     <hr />
     <h2>01/09/18</h2>
