Allowing for deletions.

--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -236,3 +236,11 @@ team-box {
         margin-bottom: 0;
     }
 }
+
+.video-display {
+    .delete-button {
+        @extend ._floatRight;
+        margin-top: -10px;
+        margin-right: -5px;
+    }
+}
