--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -243,4 +243,10 @@ team-box {
         margin-top: -10px;
         margin-right: -5px;
     }
+
+    &.deleted {
+        background-color: lighten($danger-color, 50) !important;
+        opacity: 0.4;
+        padding-top: 15px;
+    }
 }
