Updating static pages.

--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -7,6 +7,7 @@
         <li>Fixed an issue where unauthorized users could try and submit teams.</li>
         <li>Fixed some issues with querying on different browsers.</li>
         <li>Added calculator export button on Team Detail page.</li>
+        <li>Contributors can now add videos to teams. Videos uploaded by the team owner will be emphasized. Videos uploaded by other users will be smaller.</li>
     </ul>
     <hr />
     <h2>01/09/18</h2>
