--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -8,9 +8,12 @@
         <p>
             Here you can browse, search, rate, and submit teams and guides for
             <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise</a>.
+            You can share videos from your <a href="https://youtube.com" target="_blank">YouTube channel</a>
+            and even import teams directly from <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator</a>!
         </p>
         <p>
-            If you'd like to submit your own team or rate a team, simply <a href="/Account/Login">register</a> with a social media account. No passwords required!
+            If you'd like to submit your own teams, videos, guides, or even just rate a team, simply <a href="/Account/Login">register</a> with
+            a social media account. No passwords required!
         </p>
         <hr />
         <p>
