--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -68,6 +68,7 @@
             </fieldset>
         </div>
         <div class="row">
+            <em>Want to upload a video? Submit your team then check out the videos section of your new guide!</em>
             <input type="submit" class="_primary _floatRight" click.delegate="submit()" />
         </div>
     </form>
