--- a/Source/TreasureGuide.Web/Views/Account/Login.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Login.cshtml
@@ -10,15 +10,19 @@
     <hr />
     @{
         var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-        <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="_width100 _alignCenter">
-            @foreach (var provider in loginProviders.OrderBy(x => x.DisplayName))
-            {
-                <button type="submit" class="button _primary _large" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">
-                    <i class="fa fa-fw fa-@provider.AuthenticationScheme.ToLower()"></i>
-                    @provider.DisplayName
-                </button>
-            }
-        </form>
+        <div class="row">
+            <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="_width100 _alignCenter">
+                @foreach (var provider in loginProviders.OrderBy(x => x.DisplayName))
+                {
+                    <div class="col m4">
+                        <button type="submit" class="button _primary _large _width100" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">
+                            <i class="fa fa-fw fa-@provider.AuthenticationScheme.ToLower()"></i>
+                            @provider.DisplayName
+                        </button>
+                    </div>
+                }
+            </form>
+        </div>
     }
 </div>
 
