--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -8,6 +8,7 @@
         <li>Fixed some issues with querying on different browsers.</li>
         <li>Added calculator export button on Team Detail page.</li>
         <li>Contributors can now add videos to teams. Videos uploaded by the team owner will be emphasized. Videos uploaded by other users will be smaller.</li>
+        <li>Added Reddit, Discord, and Twitch login integration.</li>
     </ul>
     <hr />
     <h2>01/09/18</h2>
