--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -39,18 +39,16 @@
                 <legend>Write-Ups</legend>
                 <div class="form-group">
                     <label for="guideInput">Guide</label>
-                    <textarea id="guideInput"
-                              class="_width100"
+                    <markdown-editor id="guideInput"
                               placeholder="In-depth details on how to use the team..."
-                              value.bind="guide & validate"></textarea>
+                              value.two-way="guide & validate"></markdown-editor>
                     <div class="field-length">${guideLength}</div>
                 </div>
                 <div class="form-group">
                     <label for="creditInput">Credits</label>
-                    <textarea id="creditInput"
-                              class="_width100"
+                    <markdown-editor id="creditInput"
                               placeholder="Credits, videos, and other supplemental materials."
-                              value.bind="credits & validate"></textarea>
+                              value.two-way="credits & validate"></markdown-editor>
                     <div class="field-length">${creditLength}</div>
                 </div>
             </fieldset>
