--- a/Source/TreasureGuide.Web/src/css/forms.scss
+++ b/Source/TreasureGuide.Web/src/css/forms.scss
@@ -39,11 +39,13 @@ select[multiple] {
 }
 
 markdown.preview {
+    @extend ._grey;
     min-height: 65px;
     border: 1px solid #d1d1d1;
     border-radius: 4px;
     display: block;
     padding: 5px;
+    margin-bottom: 5px;
 }
 
 .alert-area {
