--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -1,5 +1,10 @@
 ﻿<template>
     <h1>News</h1>
+    <h2>01/11/18</h2>
+    <ul>
+        <li>Added support for markdown in guides and credits.</li>
+    </ul>
+    <hr />
     <h2>01/10/18</h2>
     <ul>
         <li>Added better error logging for server-side issues.</li>
