--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -27,6 +27,6 @@
             </style>
         </div>
     </div>
-    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    <script src="~/scripts/vendor-bundle-70ec77fd54.js" data-main="aurelia-bootstrapper"></script>
 </body>
 </html>
