Adding drafting option for teams.

--- a/Source/TreasureGuide.Web/Views/Home/_AuthExportPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/_AuthExportPartial.cshtml
@@ -4,7 +4,7 @@
     sessionStorage['access_token'] = token['token'];
     sessionStorage['access_token_exp'] = token['expiration'];
 
-    var profile = @Json.Serialize(AuthExportService.GetUserInfo(User));
+    var profile = @Json.Serialize(await AuthExportService.GetUserInfo(User));
     sessionStorage['user_profile'] = JSON.stringify(profile);
 
     // SUICIDE
