--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -31,6 +31,7 @@
                         <i class="fa fa-fw fa-cloud-download"></i>
                         Import from OPTC-DB
                     </button>
+                    <socket-display sockets.two-way="teamSockets" editable="true"></socket-display>
                 </div>
             </fieldset>
         </div>
