Updating some css

--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -262,7 +262,7 @@ team-box {
 
 .socket-collection {
     @extend ._alignLeft;
-    margin: 20px auto;
+    margin: 0 auto;
 
     @media #{$medium-and-down} {
         width: 80%;
