Adding news and filtering out 0'd-out sockets.

--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -1,5 +1,10 @@
 ﻿<template>
     <h1>News</h1>
+    <h2>01/16/18</h2>
+    <ul>
+        <li>Added support for sockets on teams.</li>
+    </ul>
+    <hr />
     <h2>01/13/18</h2>
     <ul>
         <li>Added a 'draft' option for teams, allowing you to save a team without making it public.</li>
