--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -144,7 +144,8 @@ team-box {
         margin: 0;
     }
 
-    team-display {
+    .team {
+        padding-top: 4px;
     }
 
     stage-display {
