--- a/Source/TreasureGuide.Web/src/views/boring/news.html
+++ b/Source/TreasureGuide.Web/src/views/boring/news.html
@@ -3,6 +3,9 @@
     <h2>01/16/18</h2>
     <ul>
         <li>Added support for sockets on teams.</li>
+        <li>Expanded "Free to Play" team search capabilities.</li>
+        <li>Fixed Captain search to only apply to the Captain slot instead of Friend Captain and Captain.</li>
+        <li>Added team flags to the team search views.</li>
     </ul>
     <hr />
     <h2>01/13/18</h2>
