--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -1,24 +1,41 @@
 ﻿<template>
-    <div class="jumbo _info">
-        <h1>Nakama Network</h1>
+    <div class="jumbo _info home-box">
+        <h1>Welcome to Nakama Network!</h1>
         <hr />
-        <h4>
-            Welcome to Nakama Network!
-        </h4>
-        <p>
-            Here you can browse, search, rate, and submit teams and guides for
-            <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise</a>.
-            You can share videos from your <a href="https://youtube.com" target="_blank">YouTube channel</a>
-            and even import teams directly from <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator</a>!
-        </p>
-        <p>
-            If you'd like to submit your own teams, videos, guides, or even just rate a team, simply <a href="/Account/Login">register</a> with
-            a social media account. No passwords required!
-        </p>
+        <div class="row">
+            <div class="col m6">
+                <img src="/content/home/search.png" title="Search Teams" />
+                <p>
+                    Browse, search, submit, and rate teams<br />
+                    for <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise</a>
+                </p>
+            </div>
+            <div class="col m6">
+                <img src="/content/home/calculator.png" title="Damage Calculator Import/Export" />
+                <p>
+                    Import teams directly from<br />
+                    <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator</a>
+                </p>
+            </div>
+            <div class="col m6">
+                <img src="/content/home/videos.png" title="Submit YouTube Videos" />
+                <p>
+                    Share your <a href="https://youtube.com" target="_blank">YouTube</a> videos<br />
+                    to show off your teams in action
+                </p>
+            </div>
+            <div class="col m6">
+                <img src="/content/home/register.png" title="Social Media OAuth Login" />
+                <p>
+                    <a href="/Account/Login">Register</a> quickly with a social media account<br />
+                    No passwords required!
+                </p>
+            </div>
+        </div>
         <hr />
         <p>
-            Special thanks to the folks at <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> whose constant
-            effort to document all the units and stages in this game power this tool.
+            Special thanks to the folks at <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> whose constant effort<br />
+            to document every aspect of One Piece: Treasure Cruise power Nakama Network!
         </p>
     </div>
 </template>
