--- a/Source/TreasureGuide.Web/src/views/error.html
+++ b/Source/TreasureGuide.Web/src/views/error.html
@@ -1,6 +1,9 @@
 ﻿<template>
-    <h1 class="_dangerText">${title}</h1>
-    <p>
-        ${message}
-    </p>
+    <div class="jumbo _danger">
+        <h1>${title}</h1>
+        <p>
+            ${message}
+        </p>
+        <a href="/" class="button _primary">Return Home</a>
+    </div>
 </template>
