--- a/Source/TreasureGuide.Web/src/css/teams.scss
+++ b/Source/TreasureGuide.Web/src/css/teams.scss
@@ -310,11 +310,15 @@ team-box {
         @extend .truncate;
         padding: 0 5px;
         max-width: 60%;
+        
+        @media #{$medium-and-down} {
+            max-width: 40%;
+        }
     }
 
     strong, input {
         @extend ._floatRight;
-        max-width: 20%;
+        max-width: 33%;
     }
 
     .socket-box {
