--- a/Source/TreasureGuide.Web/src/views/unauthorized.html
+++ b/Source/TreasureGuide.Web/src/views/unauthorized.html
@@ -1,6 +1,9 @@
 ﻿<template>
-    <h1>${title}</h1>
-    <div class="flow-text">
-        <p>${message}</p>
+    <div class="jumbo _danger">
+        <h1>${title}</h1>
+        <p>
+            ${message}
+        </p>
+        <a href="/" class="button _primary">Return Home</a>
     </div>
 </template>
