--- a/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Login | Nakama Network</title>
     @{ Html.RenderPartial("_HeaderPartial"); }
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
