Updating from page lnf.

--- a/Source/TreasureGuide.Web/src/views/index.html
+++ b/Source/TreasureGuide.Web/src/views/index.html
@@ -1,42 +1,62 @@
 ﻿<template>
     <div class="jumbo _info home-box">
-        <h1>Welcome to Nakama Network!</h1>
-        <hr />
+        <div class="row">
+            <h1>Welcome to Nakama Network!</h1>
+            <hr />
+        </div>
         <div class="row">
             <div class="col m6">
-                <img src="/content/home/search.png" title="Search Teams" />
-                <p>
-                    Browse, search, submit, and rate teams<br />
-                    for <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise</a>
-                </p>
+                <div class="card _white">
+                    <img src="/content/home/search.png" title="Search Teams"/>
+                    <div class="-content">
+                        <p>
+                            Browse, search, submit, and rate teams<br/>
+                            for <a href="http://onepiece-treasurecruise.com/en/" target="_blank">One Piece Treasure Cruise.</a>
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="col m6">
-                <img src="/content/home/calculator.png" title="Damage Calculator Import/Export" />
-                <p>
-                    Import teams directly from<br />
-                    <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator</a>
-                </p>
+                <div class="card _white">
+                    <img src="/content/home/calculator.png" title="Damage Calculator Import/Export"/>
+                    <div class="-content">
+                        <p>
+                            Import teams directly from<br/>
+                            <a href="http://optc-db.github.io/damage/#/" target="_blank">OPTC-db's Damage Calculator.</a>
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="col m6">
-                <img src="/content/home/videos.png" title="Submit YouTube Videos" />
-                <p>
-                    Share your <a href="https://youtube.com" target="_blank">YouTube</a> videos<br />
-                    to show off your teams in action
-                </p>
+                <div class="card _white">
+                    <img src="/content/home/videos.png" title="Submit YouTube Videos"/>
+                    <div class="-content">
+                        <p>
+                            Share your <a href="https://youtube.com" target="_blank">YouTube</a> videos<br/>
+                            to show off your teams in action!
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="col m6">
-                <img src="/content/home/register.png" title="Social Media OAuth Login" />
-                <p>
-                    <a href="/Account/Login">Register</a> quickly with a social media account<br />
-                    No passwords required!
-                </p>
+                <div class="card _white">
+                    <img src="/content/home/register.png" title="Social Media OAuth Login"/>
+                    <div class="-content">
+                        <p>
+                            <a href="/Account/Login">Register</a> quickly with a social media account.<br/>
+                            No passwords required!
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-        <hr />
-        <p>
-            Special thanks to the folks at <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> whose constant effort<br />
-            to document every aspect of One Piece: Treasure Cruise power Nakama Network!
-        </p>
+        <div class="row">
+            <hr/>
+            <p>
+                Special thanks to the folks at <a href="https://optc-db.github.io/" target="_blank">OPTC-db</a> whose constant effort<br/>
+                to document every aspect of One Piece: Treasure Cruise power Nakama Network!
+            </p>
+        </div>
     </div>
     <div class="jumbo news">
         <h4>Updates</h4>
