--- a/Source/TreasureGuide.Web/src/css/forms.scss
+++ b/Source/TreasureGuide.Web/src/css/forms.scss
@@ -51,13 +51,33 @@ markdown.preview {
 .alert-area {
     @extend ._width100;
     position: fixed;
+    bottom: -10px;
     z-index: 99999;
-    margin: 20px;
+
+    @media #{$medium-and-up} {
+        margin-bottom: 30px;
+    }
+
+    .alert {
+        padding: 10px;
+
+        @media #{$medium-and-down} {
+            padding: 5px;
+            font-size: smaller;
+        }
+
+        -webkit-animation: fadein .5s;
+        animation: fadein .5s;
+
+        &.disappearing {
+            -webkit-animation: fadeout 1s;
+            animation: fadeout 1s;
+        }
+    }
 }
 
 .alert {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 10px auto;
 
     @media #{$medium-and-down} {
         width: 90%;
