Updating pagination button sizes.

--- a/Source/TreasureGuide.Web/src/css/pagination.scss
+++ b/Source/TreasureGuide.Web/src/css/pagination.scss
@@ -13,6 +13,7 @@ aup-pagination {
             a {
                 @extend .button;
                 @extend ._small;
+                padding: 7px !important;
             }
 
             input {
